# faker

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  .isort.cfg  .rmotr  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTE.md  CONTRIBUTING.rst  DEMO.ipynb  ISSUE_TEMPLATE.md  LICENSE.txt  MANIFEST.in  Makefile  MétodoSerTestado.py  NEWS.txt  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  RELEASE_PROCESS.rst  SECURITY.md  VERSION  appveyor.yml  build-alpine.sh  build32bit.sh  circle.yml  codigotest.py  demo.yml  dev-requirements.txt  fix_passport_test.py  fix_utils_test.py  foo  generate_stubs.py  index.html  last_names_lu.py  mkdocs.yml  ml_MA_address.txt  (+16 more)
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: autobump.yml  autodeploy.yml  ci.yml  gh-release.yml  issues.yml  lint.yml  test-32bit.yml  test-alpine.yml  test-ubuntu.yml
docs/: coding_style.rst  communityproviders.rst  conf.py  fakerclass.rst  fonctions_faker.json  index.rst  make.bat  pytest-fixtures.rst  requirements.txt  writing-docs.rst
docs/all function/: aba().md  address().md  bank_country().md  binary().md  bs().md  color().md  color_rgb_float().md  credit_card_full().md  csv().md  date_this_decade().md  date_this_year().md  date_time_ad().md  date_time_between_dates().md  date_time_this_year().md  del_arguments().md  domain_name().md  dsv().md  enum().md  file_name().md  firefox().md  fixed_width().md  format().md  get_arguments().md  get_providers().md  get_words_list().md  http_method().md  iana_id().md  image().md  internet_explorer().md  ipv4_private().md  ipv6().md  lexify().md  license_plate().md  local_latlng().md  localized_ean().md  mac_address().md  mac_platform_token().md  md5().md  military_dpo().md  month().md  (+40 more)
docs/animals/: index.rst
docs/new/faker/: mkdocs.yml
docs/old/: Makefile  coding_style.rst  conf.py  index.rst  make.bat  pytest-fixtures.rst
docs/old/_templates/: breadcrumbs.html
docs/old/includes/: substitutions.rst
docs/old/providers/: .happygit
docs/references/: aba().md  address().md  am_pm().md  android_platform_token().md  bban().md  binary().md  boolean().md  bothify().md  building_number().md  catch_phrase().md  century().md  chrome().md  city().md  city_suffix().md  color_hsl().md  color_hsv().md  color_name().md  color_rgb().md  company().md  company_suffix().md  coordinate().md  credit_card_expire().md  credit_card_full().md  credit_card_number().md  credit_card_provider().md  credit_card_security_code().md  csv().md  currency_symbol().md  date().md  date_between().md  date_between_dates().md  date_object().md  date_of_birth().md  date_this_century().md  date_this_month().md  date_time().md  date_time_between().md  date_time_this_century().md  date_time_this_decade().md  date_time_this_month().md  (+110 more)
faker/: __init__.py  __main__.py  build_docs.py  build_locales.py  builder.py  cli.py  config.py  documentor.py  exceptions.py  factory.py  generator.py  proxy.py  proxy.pyi  tests.py  typing.py
faker/contrib/benchmarks/: fakebench.py
faker/contrib/pytest/: plugin.py
faker/decode/: __init__.py  codes.py
faker/injections/: random_injectrion.py
faker/providers/: Address.py  DateTime.py  Date_Time.py  File.py  Internet.py  Lorem.py  Miscelleneous.py  PhoneNumber.py  Python.py  UserAgent.py  __init__.py  address.py  barcode.py  color.py  company.py  credit_card.py  currency.py  date_time.py  file.py  image_placeholder.py  internet.py  job.py  lorem.py  misc.py  miscelleneous.py  person.py  phone_number.py  profile.py  python.py  ssn.py  user_agent.py
faker/providers/abn/: __init__.py
faker/providers/address/: __init__.py
faker/providers/ai/: __init__.py
faker/providers/animal/: __init__.py
faker/providers/animals/: __init__.py  animals.py  constants.py
faker/providers/automotive/: __init__.py
faker/providers/bank/: __init__.py
faker/providers/barcode/: __init__.py
faker/providers/bg_BG/: company.py  (+3 more)
faker/shims/: __init__.py  counter.py
faker/sphinx/: autodoc.py  docstring.py  documentor.py  validator.py
faker/tests/: __init__.py  requirements.txt  test_all.py  test_generator.py
faker/utils/: __init__.py  checksums.py  datasets.py  datetime_safe.py  decorators.py  distribution.py  loading.py  text.py
scripts/: check_test_class_order.py
tests/: __init__.py  branch_coverage.json  factory.py  random_state.json  requirements.txt  test.ipynb  test_base_provider.py  test_cli_arg_parsing.py  test_decode.py  test_en_AF.py  test_factory.py  test_generator.py  test_optional.py  test_pa_AF.py  test_pa_AF_pa.py  test_passport.py  test_providers_formats.py  test_proxy.py  test_pytest_localized.py  test_pytest_plugin.py  test_pytest_seed.py  test_sep.py  test_unique.py  test_unique_exclude.py
tests/benchmarks/: fakebench.py
tests/cli/: test_cli.py
tests/en_GB/: __init__.py
tests/injections/: test_random_injectrion.py
tests/isbn/: __init__.py
tests/ja_JP/: __init__.py
tests/mymodule/: __init__.py
tests/ne_np/: __init__.py
tests/no_NO/: __init__.py
tests/providers/: __init__.py  address.py  color.py  company.py  conftest.py  date_time.py  file.py  internet.py  job.py  person.py  postcode.py  ssn.py  test_address.py  test_ai.py  test_animal.py  test_animals.py  test_automotive.py  test_bank.py  test_barcode.py  test_bill.py  test_color.py  test_company.py  test_credit_card.py  test_credit_score.py  test_currency.py  test_date_time.py  test_doi.py  test_dynamic.py  test_ecommerce.py  test_emoji.py  test_enum.py  test_file.py  test_food.py  test_geo.py  test_healthcare.py  test_internet.py  test_isbn.py  test_isbn_pt_br.py  test_job.py  test_lorem.py  (+13 more)
tests/pt_BR/: __init__.py
tests/pytest/: test_autouse_faker_locale.py  test_autouse_faker_seed.py  test_manual_injection.py  test_unique_clear.py
tests/sphinx/: test_docstring.py  test_documentor.py  test_validator.py
tests/utils/: __init__.py  branch_coverage.json  pa_AF_en.py  test_text_utils_slugify.py  test_utils.py
tests/zh_CN/: __init__.py
tools/providers/: get_date_time_data.py
(+978 files in other folders)
