[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Faker"
description = "Faker is a Python package that generates fake data for you."
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dynamic = ["version"]
authors = [{ name = "joke2k", email = "joke2k@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
keywords = ["faker", "fixtures", "data", "test", "mock", "generator"]
dependencies = ["python-dateutil>=2.9.0.post0", "typing-extensions>=4.12.2"]

[project.urls]
"Bug Tracker" = "https://github.com/joke2k/faker/issues"
"Changes" = "https://github.com/joke2k/faker/blob/master/CHANGELOG.md"
"Documentation" = "http://faker.rtfd.org/"
"Source Code" = "https://github.com/joke2k/faker"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
faker = ["py.typed", "proxy.pyi"]

[tool.setuptools.data-files]
"" = [
    "README.rst",
    "LICENSE.txt",
    "CONTRIBUTING.rst",
    "CHANGELOG.md",
    "RELEASE_PROCESS.rst",
    "VERSION",
    "CITATION.cff",
    "pyproject.toml",
    "tox.ini",
]

[tool.setuptools.exclude-package-data]
tests = ["*"]
docs = ["*"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project.scripts]
faker = "faker.cli:execute_from_command_line"

[project.entry-points.pytest11]
faker = "faker.contrib.pytest.plugin"

[project.optional-dependencies]
image = ["pillow>=10.4.0"]
xml = ["xmltodict>=0.14.2"]
all = ["faker[image,xml]"]

# CI deps

tests = [
    "coverage>=5.2",
    "freezegun<0.4",
    "pytest>=6.0.1",
    "ukpostcodeparser>=1.1.1",
    "validators>=0.13.0",
    "sphinx>=2.4,<3.0",
]
lint = [
    "flake8>=4.0.0",
    "flake8-comprehensions>=3.15.0"
]
format = [
    "isort>=5.13.2",
    "black==24.4.0",
    "doc8>=1.1.2",
]
typecheck = [
    "mypy>=0.910",
]
docs = ["sphinx>=2.4,<3.0"]
dev = ["tox>=4.23.2", "faker[all,tests,lint,docs,format,typecheck]"]


[tool.setuptools.packages.find]
exclude = ["docs", "tests", "tests.*"]

[tool.mypy]
disallow_subclassing_any = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
allow_redefinition = true
pretty = true
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
